Adjusted the height of Buttons and alignment fixed in the .view-filters div.

--- a/docroot/sites/all/themes/ambitious/css/forms.css
+++ b/docroot/sites/all/themes/ambitious/css/forms.css
@@ -375,7 +375,7 @@ body > .jcf-select-drop.jcf-drop-flipped {
   margin-right: 10px;
   padding: 5px 19px;
   font-size: 18px;
-  line-height: 30px;
+  line-height: 28px;
   color: #ffffff;
   text-align: center;
   text-decoration: none;
