--- a/docroot/sites/all/themes/ambitious/sass/buttons.scss
+++ b/docroot/sites/all/themes/ambitious/sass/buttons.scss
@@ -4,22 +4,18 @@
 .btn {  
   border: medium none;
   cursor: pointer;  
-  display:inline-block; 
-
+  display:inline-block;
   font-family: inherit;
   font-size: inherit;
   color: $white;
   text-align:center;
   text-decoration:none;
-
   margin-top: 5px;
   margin-bottom: 5px;
   outline: medium none;
   padding: 25px 80px;
   position: relative;
-
-  line-height:30px;
-
+  line-height:29px;
   background: none, repeat, scroll, 0, 0, $orange;
 
   // drop the shadow
@@ -47,7 +43,7 @@
     vertical-align:top;
     word-spacing:3px;
     top:6px;
-    margin-left: 10px;
+    margin-left:11px;
   }
 
   span {
@@ -192,12 +188,11 @@ a.btn:hover {
    }
 
    a.btn{
-			// font-family: $base-font-family;
-			padding: 9px 34px;
-
-			@include breakpoint($mobile){
-       width: 100%;
-       margin-bottom: 25px;
+		// font-family: $base-font-family;
+		padding: 9px 30px;
+    @include breakpoint($mobile){
+      width: 100%;
+      margin-bottom: 25px;
      }
    }
  }
@@ -306,21 +301,20 @@ a.btn:hover {
 
 .sort-block{
   .btn{
-    padding: 4px 19px 5px 19px;
-    margin-top: 0px;
+    padding: 4px 19px;
+    margin-top: 2px;
+    @include breakpoint($mobile) {
+      margin-top:0px;
+    }
   }
 }
 
 .footer{
   .btn{
-    padding-top: 5px;
-    padding-left: 19px;
-    padding-right: 19px;
-    padding-bottom: 5px;
+    padding: 4px 19px;
     margin-top: 0px;    
   }
 }
-
 
 .btn-facebook{
   @include box-shadow(0px 6px $fb-blue-dark);
@@ -376,7 +370,8 @@ a.btn:hover {
   border:none;
   padding:5px 19px;
   font-size:18px;
-  line-height:30px;
+  line-height:28px;
+  margin-top:2px;
   border-radius:5px;
   color:$white;
   text-align:center;
@@ -387,25 +382,26 @@ a.btn:hover {
   font-weight:normal;
   font-family:$base-font-family;
   @include breakpoint($mobile) {
-   padding-top: 7px;
-   font-size: 16px
- }
- &:hover {
-   border-bottom-width: 3px;
-   margin-top:2px;
-   text-decoration:none;
-   color:$white;
- }
- &:active{
-   border-bottom-width:0px;
-   margin-top:5px;
-   text-decoration:none;
-   color:$white;
- }
- &:visited{
-   text-decoration:none;
-   color:$white;
- }  
+    padding-top: 7px;
+    font-size: 16px;
+    margin-top:0px;
+  }
+  &:hover {
+    border-bottom-width: 3px;
+    margin-top:2px;
+    text-decoration:none;
+    color:$white;
+  }
+  &:active{
+    border-bottom-width:0px;
+    margin-top:5px;
+    text-decoration:none;
+    color:$white;
+  }
+  &:visited{
+    text-decoration:none;
+    color:$white;
+  }  
  .st-sharethis-counter{
    background:none !important;
    width:109px;         
@@ -531,5 +527,5 @@ a.btn:hover {
   -webkit-font-smoothing: antialiased;
   display: inline-block;
   vertical-align: middle;
-  padding-left: 20px;
+  padding-left: 16px;
 }
